--- a/MyLottoExample/Base.lproj/Main.storyboard
+++ b/MyLottoExample/Base.lproj/Main.storyboard
@@ -1,24 +1,171 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MyLottoExample" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rcs-Kr-o3l">
+                                <rect key="frame" x="20" y="308" width="374" height="280.5"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qof-4S-2Sd">
+                                        <rect key="frame" x="20" y="20" width="334" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="FoB-fm-kZG"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="3gZ-X7-Vfw">
+                                        <rect key="frame" x="132.5" y="85" width="109.5" height="20.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="913회" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4mF-Ia-0Xx">
+                                                <rect key="frame" x="0.0" y="0.0" width="45.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                <color key="textColor" systemColor="systemTealColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="당첨결과" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VQR-x7-OhH">
+                                                <rect key="frame" x="50.5" y="0.0" width="59" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="dwL-Fj-MHw">
+                                        <rect key="frame" x="20" y="125.5" width="334" height="43"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hdb-BX-F5L">
+                                                <rect key="frame" x="0.0" y="0.0" width="43.5" height="43"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="Hdb-BX-F5L" secondAttribute="height" multiplier="1:1" id="p71-Ve-UTi"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fk5-La-TCg">
+                                                <rect key="frame" x="48.5" y="0.0" width="43.5" height="43"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R94-th-poe">
+                                                <rect key="frame" x="97" y="0.0" width="43.5" height="43"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WTc-s1-Jez">
+                                                <rect key="frame" x="145.5" y="0.0" width="43" height="43"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WTg-OY-aYn">
+                                                <rect key="frame" x="193.5" y="0.0" width="43.5" height="43"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TmD-8R-HVj">
+                                                <rect key="frame" x="242" y="0.0" width="43.5" height="43"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="umA-4Y-dTI">
+                                                <rect key="frame" x="290.5" y="0.0" width="43.5" height="43"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2020.03.02" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gVu-vC-IRK">
+                                        <rect key="frame" x="284.5" y="243.5" width="69.5" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LGr-gZ-FVU">
+                                        <rect key="frame" x="137" y="188.5" width="100.5" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="7xB-z0-NWy"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="당첨금액 확인"/>
+                                        <connections>
+                                            <action selector="moneyButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Pb-BP-xjV"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="3gZ-X7-Vfw" firstAttribute="centerX" secondItem="rcs-Kr-o3l" secondAttribute="centerX" id="0MG-eF-i8W"/>
+                                    <constraint firstItem="dwL-Fj-MHw" firstAttribute="leading" secondItem="rcs-Kr-o3l" secondAttribute="leading" constant="20" id="9Ox-bL-5Ie"/>
+                                    <constraint firstItem="3gZ-X7-Vfw" firstAttribute="top" secondItem="qof-4S-2Sd" secondAttribute="bottom" constant="20" id="IJi-Cj-CWA"/>
+                                    <constraint firstItem="qof-4S-2Sd" firstAttribute="leading" secondItem="rcs-Kr-o3l" secondAttribute="leading" constant="20" id="Irx-V3-yvX"/>
+                                    <constraint firstAttribute="bottom" secondItem="gVu-vC-IRK" secondAttribute="bottom" constant="20" id="NVJ-Nk-DaI"/>
+                                    <constraint firstAttribute="trailing" secondItem="dwL-Fj-MHw" secondAttribute="trailing" constant="20" id="Rmx-oF-zPq"/>
+                                    <constraint firstAttribute="trailing" secondItem="qof-4S-2Sd" secondAttribute="trailing" constant="20" id="VpC-RF-5DQ"/>
+                                    <constraint firstAttribute="width" secondItem="rcs-Kr-o3l" secondAttribute="height" multiplier="4:3" id="Xh3-wj-mNn"/>
+                                    <constraint firstItem="gVu-vC-IRK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="rcs-Kr-o3l" secondAttribute="leading" constant="20" symbolic="YES" id="a5p-Np-824"/>
+                                    <constraint firstItem="dwL-Fj-MHw" firstAttribute="top" secondItem="3gZ-X7-Vfw" secondAttribute="bottom" constant="20" id="bOl-vZ-PQl"/>
+                                    <constraint firstItem="LGr-gZ-FVU" firstAttribute="centerX" secondItem="rcs-Kr-o3l" secondAttribute="centerX" id="bVh-YH-Z3f"/>
+                                    <constraint firstAttribute="trailing" secondItem="gVu-vC-IRK" secondAttribute="trailing" constant="20" id="ch5-1m-uBL"/>
+                                    <constraint firstItem="LGr-gZ-FVU" firstAttribute="top" secondItem="dwL-Fj-MHw" secondAttribute="bottom" constant="20" id="ddZ-Gs-9FW"/>
+                                    <constraint firstItem="gVu-vC-IRK" firstAttribute="top" secondItem="LGr-gZ-FVU" secondAttribute="bottom" constant="10" id="oia-Xi-ozV"/>
+                                    <constraint firstItem="qof-4S-2Sd" firstAttribute="top" secondItem="rcs-Kr-o3l" secondAttribute="top" constant="20" id="z1b-Ic-bFH"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rcs-Kr-o3l" secondAttribute="trailing" constant="20" id="nQC-7Q-8tg"/>
+                            <constraint firstItem="rcs-Kr-o3l" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="xsO-Jc-knj"/>
+                            <constraint firstItem="rcs-Kr-o3l" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ycZ-x3-zpl"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="containerView" destination="rcs-Kr-o3l" id="VQz-ld-ou2"/>
+                        <outlet property="dateLabel" destination="gVu-vC-IRK" id="es7-va-fx2"/>
+                        <outlet property="lottoBonusLabel" destination="umA-4Y-dTI" id="F88-9n-FV3"/>
+                        <outlet property="lottoLabelStacView" destination="dwL-Fj-MHw" id="yQS-Ig-DfR"/>
+                        <outlet property="lottoNumLabel1" destination="Hdb-BX-F5L" id="EG5-r6-Qo7"/>
+                        <outlet property="lottoNumLabel2" destination="Fk5-La-TCg" id="lwZ-EW-k1a"/>
+                        <outlet property="lottoNumLabel3" destination="R94-th-poe" id="P3v-bh-KnU"/>
+                        <outlet property="lottoNumLabel4" destination="WTc-s1-Jez" id="zem-Y1-qKe"/>
+                        <outlet property="lottoNumLabel5" destination="WTg-OY-aYn" id="ZU7-gN-ZPa"/>
+                        <outlet property="lottoNumLabel6" destination="TmD-8R-HVj" id="cyj-BD-pxx"/>
+                        <outlet property="lottoRoundLabel" destination="4mF-Ia-0Xx" id="SDl-lG-Uy0"/>
+                        <outlet property="lottoRoundTextFiled" destination="qof-4S-2Sd" id="c7x-KE-tQY"/>
+                        <outlet property="moneyButton" destination="LGr-gZ-FVU" id="sY8-eX-k2i"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-307.24637681159425" y="116.51785714285714"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
