--- a/MyLottoExample/Base.lproj/Main.storyboard
+++ b/MyLottoExample/Base.lproj/Main.storyboard
@@ -17,38 +17,41 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rcs-Kr-o3l">
-                                <rect key="frame" x="20" y="308" width="374" height="280.5"/>
+                                <rect key="frame" x="20" y="284.5" width="374" height="327"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qof-4S-2Sd">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="987" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qof-4S-2Sd">
                                         <rect key="frame" x="20" y="20" width="334" height="45"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="FoB-fm-kZG"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="3gZ-X7-Vfw">
-                                        <rect key="frame" x="132.5" y="85" width="109.5" height="20.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="3gZ-X7-Vfw">
+                                        <rect key="frame" x="133" y="85" width="108.5" height="30"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="913회" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4mF-Ia-0Xx">
-                                                <rect key="frame" x="0.0" y="0.0" width="45.5" height="20.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="913회" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4mF-Ia-0Xx">
+                                                <rect key="frame" x="0.0" y="0.0" width="45.5" height="30"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                <color key="textColor" systemColor="systemTealColor"/>
+                                                <color key="textColor" red="0.91850298643112183" green="0.79987829923629761" blue="0.2482990026473999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="당첨결과" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VQR-x7-OhH">
-                                                <rect key="frame" x="50.5" y="0.0" width="59" height="20.5"/>
+                                                <rect key="frame" x="49.5" y="0.0" width="59" height="30"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="EHW-1a-IW6"/>
+                                        </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="dwL-Fj-MHw">
-                                        <rect key="frame" x="20" y="125.5" width="334" height="43"/>
+                                        <rect key="frame" x="20" y="135" width="334" height="43.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hdb-BX-F5L">
-                                                <rect key="frame" x="0.0" y="0.0" width="43.5" height="43"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="43.5" height="43.5"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="Hdb-BX-F5L" secondAttribute="height" multiplier="1:1" id="p71-Ve-UTi"/>
                                                 </constraints>
@@ -57,55 +60,57 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fk5-La-TCg">
-                                                <rect key="frame" x="48.5" y="0.0" width="43.5" height="43"/>
+                                                <rect key="frame" x="48.5" y="0.0" width="43.5" height="43.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R94-th-poe">
-                                                <rect key="frame" x="97" y="0.0" width="43.5" height="43"/>
+                                                <rect key="frame" x="97" y="0.0" width="43.5" height="43.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WTc-s1-Jez">
-                                                <rect key="frame" x="145.5" y="0.0" width="43" height="43"/>
+                                                <rect key="frame" x="145.5" y="0.0" width="43" height="43.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WTg-OY-aYn">
-                                                <rect key="frame" x="193.5" y="0.0" width="43.5" height="43"/>
+                                                <rect key="frame" x="193.5" y="0.0" width="43.5" height="43.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TmD-8R-HVj">
-                                                <rect key="frame" x="242" y="0.0" width="43.5" height="43"/>
+                                                <rect key="frame" x="242" y="0.0" width="43.5" height="43.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="bo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="umA-4Y-dTI">
-                                                <rect key="frame" x="290.5" y="0.0" width="43.5" height="43"/>
+                                                <rect key="frame" x="290.5" y="0.0" width="43.5" height="43.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2020.03.02" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gVu-vC-IRK">
-                                        <rect key="frame" x="284.5" y="243.5" width="69.5" height="17"/>
+                                        <rect key="frame" x="284.5" y="291" width="69.5" height="16"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LGr-gZ-FVU">
-                                        <rect key="frame" x="137" y="188.5" width="100.5" height="45"/>
+                                        <rect key="frame" x="20" y="198.5" width="334" height="45"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="7xB-z0-NWy"/>
                                         </constraints>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="당첨금액 확인"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="당첨금액 확인">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                         <connections>
                                             <action selector="moneyButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Pb-BP-xjV"/>
                                         </connections>
@@ -118,15 +123,15 @@
                                     <constraint firstItem="3gZ-X7-Vfw" firstAttribute="top" secondItem="qof-4S-2Sd" secondAttribute="bottom" constant="20" id="IJi-Cj-CWA"/>
                                     <constraint firstItem="qof-4S-2Sd" firstAttribute="leading" secondItem="rcs-Kr-o3l" secondAttribute="leading" constant="20" id="Irx-V3-yvX"/>
                                     <constraint firstAttribute="bottom" secondItem="gVu-vC-IRK" secondAttribute="bottom" constant="20" id="NVJ-Nk-DaI"/>
+                                    <constraint firstItem="LGr-gZ-FVU" firstAttribute="leading" secondItem="rcs-Kr-o3l" secondAttribute="leading" constant="20" id="Olu-L1-f2R"/>
                                     <constraint firstAttribute="trailing" secondItem="dwL-Fj-MHw" secondAttribute="trailing" constant="20" id="Rmx-oF-zPq"/>
                                     <constraint firstAttribute="trailing" secondItem="qof-4S-2Sd" secondAttribute="trailing" constant="20" id="VpC-RF-5DQ"/>
-                                    <constraint firstAttribute="width" secondItem="rcs-Kr-o3l" secondAttribute="height" multiplier="4:3" id="Xh3-wj-mNn"/>
-                                    <constraint firstItem="gVu-vC-IRK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="rcs-Kr-o3l" secondAttribute="leading" constant="20" symbolic="YES" id="a5p-Np-824"/>
+                                    <constraint firstAttribute="width" secondItem="rcs-Kr-o3l" secondAttribute="height" multiplier="4:3.5" id="Xh3-wj-mNn"/>
                                     <constraint firstItem="dwL-Fj-MHw" firstAttribute="top" secondItem="3gZ-X7-Vfw" secondAttribute="bottom" constant="20" id="bOl-vZ-PQl"/>
                                     <constraint firstItem="LGr-gZ-FVU" firstAttribute="centerX" secondItem="rcs-Kr-o3l" secondAttribute="centerX" id="bVh-YH-Z3f"/>
                                     <constraint firstAttribute="trailing" secondItem="gVu-vC-IRK" secondAttribute="trailing" constant="20" id="ch5-1m-uBL"/>
                                     <constraint firstItem="LGr-gZ-FVU" firstAttribute="top" secondItem="dwL-Fj-MHw" secondAttribute="bottom" constant="20" id="ddZ-Gs-9FW"/>
-                                    <constraint firstItem="gVu-vC-IRK" firstAttribute="top" secondItem="LGr-gZ-FVU" secondAttribute="bottom" constant="10" id="oia-Xi-ozV"/>
+                                    <constraint firstAttribute="trailing" secondItem="LGr-gZ-FVU" secondAttribute="trailing" constant="20" id="yys-of-gaw"/>
                                     <constraint firstItem="qof-4S-2Sd" firstAttribute="top" secondItem="rcs-Kr-o3l" secondAttribute="top" constant="20" id="z1b-Ic-bFH"/>
                                 </constraints>
                             </view>
@@ -163,9 +168,6 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemTealColor">
-            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
